# atlasnode

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MCP.md  MERIDIAN_Brain.code-workspace  README.md  pyproject.toml  run-atlasnode-dashboard.bat  run-meridian-dashboard.bat
.github/: copilot-instructions.md
.github/agents/: AtlasNode.agent.md  Meridian.agent.md
.github/prompts/: start-atlasnode.prompt.md  start-meridian.prompt.md
atlasnode_mcp/: __init__.py  dashboard.py  server.py  store.py
meridian_mcp/: __init__.py  dashboard.py  server.py  store.py
packaging/: START_HERE.md  install-atlasnode.bat  install-meridian.bat  run-atlasnode-dashboard.bat  run-atlasnode-server.bat  run-meridian-dashboard.bat  run-meridian-server.bat
packaging/agent-template/: AGENTS.md  README.md
scripts/: build_distribution.py
tests/: test_dashboard.py  test_store.py
